data/derived/comb/progs/unify/prog2789.ml.out
Characters 51-52:
  let base = fun p ->a  p in
                     ^
Error: This expression has type int
       This is not a function; it cannot be applied.
